--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,9 @@
 	<string name="pleaseChooseAnAnswerStringValue">Please choose an answer.\n答えを選択してください。</string>
 	<string name="pressTheMenuButtonToSaveStringValue">Please press the Menu button on your device to open the Save option.</string>
 
+	<string name="signup"><u>Sign Up</u></string>
+	<string name="terms">Usbong is STILL in BETA testing. In as much as we do our best to make this software as reliable as possible, we don’t guarantee it’s 100% bug-free. We offer the software on an AS IS basis, without warranties. Further, we reserve the right to terminate your account and data, at any time without notice, in the unlikely event that it becomes necessary for our testing purposes. We are NOT liable for any direct or indirect losses, such as data and service interruption, that this may cause you. Finally, Usbong is also under the Apache v2.0 license.\n\nCopyright 2012 Michael Syson\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\nIf you understand and agree to this, please select "Agree". </string>
+	
 	<string name="noStringValueEnglish">No</string>
 	<string name="yesStringValueEnglish">Yes</string>  
 
@@ -25,7 +28,11 @@
     
     <string name="UsbongEndStateTextView">You\'ve now reached the end. \n　終点に着いた。 \n　你已经到了终点。</string>        
     <string name="default_textview">default</string>    
+    <string name="loading_textview">loading...</string>    
 
+    <string name="loading_long_textview">long: loading...</string>    
+    <string name="loading_lat_textview">lat: loading...</string>    
+        
 	<string name="date_month">month</string>
     <string-array name="months_array">
         <item>Jan</item>
@@ -97,5 +104,5 @@
     
     <dimen name="defTextSize">30px</dimen>
     <color name="defTextColor">#FFFFFF</color>
-    <dimen name="defPaddingTop">16px</dimen>    
+    <dimen name="defPaddingTop">16px</dimen>        
 </resources>
