--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,7 +30,31 @@
 
     <string name="UsbongEndStateTextView_FILIPINO">Narating mo na ang dulo.</string>        
     <string name="UsbongEndStateTextView_ENGLISH">You\'ve now reached the end.</string>        
-    <string name="UsbongEndStateTextView_JAPANESE">終点に着いた。</string>        
+    <string name="UsbongEndStateTextView_JAPANESE">終点に着いた。</string>       
+    
+    <string name="UsbongPaintScreenTextView_FILIPINO">Paint Iskrin</string>        
+    <string name="UsbongPaintScreenTextView_ENGLISH">Paint Screen</string>        
+    <string name="UsbongPaintScreenTextView_JAPANESE">ペイントスクリーン</string>       
+
+    <string name="UsbongRecordTextView_FILIPINO">Rekord</string>        
+    <string name="UsbongRecordTextView_ENGLISH">Record</string>        
+    <string name="UsbongRecordTextView_JAPANESE">レコード</string>       
+    
+    <string name="UsbongStopTextView_FILIPINO">Hinto</string>        
+    <string name="UsbongStopTextView_ENGLISH">Stop</string>        
+    <string name="UsbongStopTextView_JAPANESE">ストップ</string>       
+
+    <string name="UsbongPlayTextView_FILIPINO">Play</string>        
+    <string name="UsbongPlayTextView_ENGLISH">Play</string>        
+    <string name="UsbongPlayTextView_JAPANESE">プレイ</string>       
+
+    <string name="UsbongTakePhotoTextView_FILIPINO">Kumuha ng Litrato</string>        
+    <string name="UsbongTakePhotoTextView_ENGLISH">Take Photo</string>        
+    <string name="UsbongTakePhotoTextView_JAPANESE">写真を撮る</string>       
+
+    <string name="UsbongRunPaintTextView_FILIPINO">Patakbuhin ang Paint</string>        
+    <string name="UsbongRunPaintTextView_ENGLISH">Run Paint</string>        
+    <string name="UsbongRunPaintTextView_JAPANESE">ペイントを起動する</string>       
     
     <string name="UsbongEndStateTextView">You\'ve now reached the end. \n　終点に着いた。 \n　你已经到了终点。</string>        
     <string name="default_textview">default</string>    
@@ -97,7 +121,8 @@
     
 	<string name="photo_capture_textview">Photo Capture</string>
 
-
+	<string name="paint_textview">Paint Screen</string>
+	
     <string name="vocab_list_filename">vocab_list.txt</string>
     
     <string name="group_a_hint_textview">The word to be guessed by the other group is: </string>
