--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -14,11 +14,19 @@
 	<string name="signup"><u>Sign Up</u></string>
 	<string name="terms">Usbong is STILL in BETA testing. In as much as we do our best to make this software as reliable as possible, we don’t guarantee it’s 100% bug-free. We offer the software on an AS IS basis, without warranties. Further, we reserve the right to terminate your account and data, at any time without notice, in the unlikely event that it becomes necessary for our testing purposes. We are NOT liable for any direct or indirect losses, such as data and service interruption, that this may cause you. Finally, Usbong is also under the Apache v2.0 license.\n\nCopyright 2012 Michael Syson\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\nIf you understand and agree to this, please select "Agree". </string>
 	
-	<string name="noStringValueEnglish">No</string>
-	<string name="yesStringValueEnglish">Yes</string>  
-
 	<string name="pleaseMakeSureThatXMLTreeExistsString">Please make sure that an XML tree exists in your SD Card\'s \'/usbong/usbong_trees/\' directory!</string>
 
+	<string name="alertEnglish">Alert!</string>
+	<string name="alertFilipino">Alert!</string>
+	<string name="alertJapanese">ご注意下さい！</string>	
+	
+	<string name="areYouSureYouWantToReturnToMainMenuEnglish">Are you sure you want to return to Main Menu?</string>
+	<string name="areYouSureYouWantToReturnToMainMenuFilipino">Sigurado ka bang nais mong bumalik sa Main Menu?</string>
+	<string name="areYouSureYouWantToReturnToMainMenuJapanese">メイン・メニューへ本当に戻りたいですか？</string>
+	
+		
+	<string name="noStringValueEnglish">No</string>
+	<string name="yesStringValueEnglish">Yes</string>  
 	<string name="noStringValueFilipino">Hindi</string>
 	<string name="yesStringValueFilipino">Oo</string>  
 	<string name="noStringValueJapanese">いいえ</string>
@@ -28,45 +36,45 @@
 	<string name="yesStringValue">Yes [はい] [要]</string>  
 	<string name="alertStringValue">Alert! 注意！</string>  
 
-    <string name="UsbongEndStateTextView_FILIPINO">Narating mo na ang dulo.</string>        
-    <string name="UsbongEndStateTextView_ENGLISH">You\'ve now reached the end.</string>        
-    <string name="UsbongEndStateTextView_JAPANESE">終点に着いた。</string>       
+    <string name="UsbongEndStateTextViewFILIPINO">Narating mo na ang dulo.</string>        
+    <string name="UsbongEndStateTextViewENGLISH">You\'ve now reached the end.</string>        
+    <string name="UsbongEndStateTextViewJAPANESE">終点に着いた。</string>       
     
-    <string name="UsbongPaintScreenTextView_FILIPINO">Paint Iskrin</string>        
-    <string name="UsbongPaintScreenTextView_ENGLISH">Paint Screen</string>        
-    <string name="UsbongPaintScreenTextView_JAPANESE">ペイントスクリーン</string>       
+    <string name="UsbongPaintScreenTextViewFILIPINO">Paint Iskrin</string>        
+    <string name="UsbongPaintScreenTextViewENGLISH">Paint Screen</string>        
+    <string name="UsbongPaintScreenTextViewJAPANESE">ペイントスクリーン</string>       
 
-    <string name="UsbongRecordTextView_FILIPINO">Rekord</string>        
-    <string name="UsbongRecordTextView_ENGLISH">Record</string>        
-    <string name="UsbongRecordTextView_JAPANESE">レコード</string>       
+    <string name="UsbongRecordTextViewFILIPINO">Rekord</string>        
+    <string name="UsbongRecordTextViewENGLISH">Record</string>        
+    <string name="UsbongRecordTextViewJAPANESE">レコード</string>       
     
-    <string name="UsbongStopTextView_FILIPINO">Hinto</string>        
-    <string name="UsbongStopTextView_ENGLISH">Stop</string>        
-    <string name="UsbongStopTextView_JAPANESE">ストップ</string>       
+    <string name="UsbongStopTextViewFILIPINO">Hinto</string>        
+    <string name="UsbongStopTextViewENGLISH">Stop</string>        
+    <string name="UsbongStopTextViewJAPANESE">ストップ</string>       
 
-    <string name="UsbongPlayTextView_FILIPINO">Play</string>        
-    <string name="UsbongPlayTextView_ENGLISH">Play</string>        
-    <string name="UsbongPlayTextView_JAPANESE">プレイ</string>       
+    <string name="UsbongPlayTextViewFILIPINO">Play</string>        
+    <string name="UsbongPlayTextViewENGLISH">Play</string>        
+    <string name="UsbongPlayTextViewJAPANESE">プレイ</string>       
 
-    <string name="UsbongTakePhotoTextView_FILIPINO">Kumuha ng Litrato</string>        
-    <string name="UsbongTakePhotoTextView_ENGLISH">Take Photo</string>        
-    <string name="UsbongTakePhotoTextView_JAPANESE">写真を撮る</string>       
+    <string name="UsbongTakePhotoTextViewFILIPINO">Kumuha ng Litrato</string>        
+    <string name="UsbongTakePhotoTextViewENGLISH">Take Photo</string>        
+    <string name="UsbongTakePhotoTextViewJAPANESE">写真を撮る</string>       
 
-    <string name="UsbongRunPaintTextView_FILIPINO">Patakbuhin ang Paint</string>        
-    <string name="UsbongRunPaintTextView_ENGLISH">Run Paint</string>        
-    <string name="UsbongRunPaintTextView_JAPANESE">ペイントを起動する</string>       
+    <string name="UsbongRunPaintTextViewFILIPINO">Patakbuhin ang Paint</string>        
+    <string name="UsbongRunPaintTextViewENGLISH">Run Paint</string>        
+    <string name="UsbongRunPaintTextViewJAPANESE">ペイントを起動する</string>       
 
-    <string name="UsbongQRCodeReaderTextView_FILIPINO">Kunin ang QR Code</string>        
-    <string name="UsbongQRCodeReaderTextView_ENGLISH">Get QR Code</string>        
-    <string name="UsbongQRCodeReaderTextView_JAPANESE">QRコードを取る</string>       
+    <string name="UsbongQRCodeReaderTextViewFILIPINO">Kunin ang QR Code</string>        
+    <string name="UsbongQRCodeReaderTextViewENGLISH">Get QR Code</string>        
+    <string name="UsbongQRCodeReaderTextViewJAPANESE">QRコードを取る</string>       
 
-    <string name="UsbongQRCodeReaderContentResultNone_FILIPINO">Wala pang naka-save na QR Code content!</string>        
-    <string name="UsbongQRCodeReaderContentResultNone_ENGLISH">No QR Code content has been saved yet!</string>        
-    <string name="UsbongQRCodeReaderContentResultNone_JAPANESE">保存されたQRコードの内容はまだない！</string>       
+    <string name="UsbongQRCodeReaderContentResultNoneFILIPINO">Wala pang naka-save na QR Code content!</string>        
+    <string name="UsbongQRCodeReaderContentResultNoneENGLISH">No QR Code content has been saved yet!</string>        
+    <string name="UsbongQRCodeReaderContentResultNoneJAPANESE">保存されたQRコードの内容はまだない！</string>       
 
-    <string name="UsbongQRCodeReaderContentResult_FILIPINO">Nai-save ang laman ng QR Code!</string>        
-    <string name="UsbongQRCodeReaderContentResult_ENGLISH">QR Code content successfully saved!</string>        
-    <string name="UsbongQRCodeReaderContentResult_JAPANESE">QRコードの内容が保存された！</string>       
+    <string name="UsbongQRCodeReaderContentResultFILIPINO">Nai-save ang laman ng QR Code!</string>        
+    <string name="UsbongQRCodeReaderContentResultENGLISH">QR Code content successfully saved!</string>        
+    <string name="UsbongQRCodeReaderContentResultJAPANESE">QRコードの内容が保存された！</string>       
     
     <string name="UsbongEndStateTextView">You\'ve now reached the end. \n　終点に着いた。 \n　你已经到了终点。</string>        
     <string name="default_textview">default</string>    
