+fixed: another gps bug (if loading is skipped and data is retrieved in another screen, error occurs) +fixed: debug mode (skipping of screens; for decision, sendToCloudBasedService, and sendToWebServer) = OK +fixed: padding left, right, top +fixed: link bug (back/next buttons don't work) +fixed: larger text for alert dialog in TEXT_CLICKABLE_IMAGE_DISPLAY_SCREEN and CLICKABLE_IMAGE_DISPLAY_SCREEN +edited: credits and about +updated: usbong demo tree

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="hello">Hello World, UsbongActivity!</string>
     <string name="app_name">Usbong</string>
-    <string name="group_a_name">Group A</string>    
-    <string name="group_b_name">Group B</string>    
+    <string name="back">Back</string>    
+    <string name="next">Next</string>    
     <string name="team_name_textview">Team Name:</string>    
 	<string name="pleaseChooseAnAnswerStringValue">Please choose an answer.</string>
 	<string name="pleaseChooseAnAnswerStringValueJapanese">答えを選んでください。</string>
