--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,13 @@
 <resources>
     <string name="hello">Hello World, UsbongActivity!</string>
     <string name="app_name">Usbong</string>
+    <string name="start">Start</string>
+    <string name="logo">Logo</string>    
+    <string name="instructions">Instructions</string>    
+    <string name="about">About</string>
+    <string name="settings">Settings</string>    
+    <string name="exit">Exit</string>        
+    
     <string name="back">Back</string>    
     <string name="next">Next</string>    
     <string name="team_name_textview">Team Name:</string>    
