--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="logo">Logo</string>    
     <string name="instructions">Instructions</string>    
     <string name="about">About</string>
+    <string name="community">Community</string>    
     <string name="settings">Settings</string>    
     <string name="exit">Exit</string>        
     
