--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <resources>
-    <string name="hello">Hello World, UsbongActivity!</string>
+    <string name="hello_world">Hello World, UsbongActivity!</string>
     <string name="app_name">Usbong</string>
     <string name="start">Start</string>
     <string name="logo">Logo</string>    
@@ -182,4 +182,10 @@
     <string name="cancel">Cancel</string>
     
     <string name="enter_pin">PIN</string>
+    
+    <string name="download">Download</string>
+    <string name="desc">ImageView</string>
+    <string name="action_search">Search</string>
+    <string name="action_settings">Settings</string>
+    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>    
 </resources>
